2006-01-11	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_paint_item): Let the cell renderer
	  know whether the current item has the keyboard focus. Part one of fix
	  for bug #1321.

2005-12-30	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_start_rubberbanding): Be sure to
	  disable a previous rubberband selection when starting a new rubberband
	  selection.

2005-12-17	Benedikt Meurer <benny@xfce.org>

	* NEWS, README, configure.in.in: Add support for three different levels
	  of debugging support.

2005-12-15	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_expose_event): Don't handle expose
	  events until the layout has been calculated.
	* exo/exo-icon-view.c(exo_icon_view_expose_event): Simplify the rubber-
	  band painting by taking advantage of double-buffering.

2005-12-13	Benedikt Meurer <benny@xfce.org>

	* exo/exo-gdk-pixbuf-extensions.{c,h}, exo/exo.symbols: Add new function
	  exo_gdk_pixbuf_scale_down(), which scales down an icon to fit into
	  given dest_width/dest_height, optionally preserving the aspect ratio
	  of the source icon.
	* docs/reference/tmpl/exo-gdk-pixbuf-extensions.sgml,
	  docs/reference/exo-sections.txt: Add new function to the reference
	  manual.
	* docs/reference/tmpl/exo-ellipsized-label.sgml,
	  exo/exo-ellipsized-label.h: Small documentation fix.
	* HACKING, README: Update URLs and descriptions.

2005-12-05	Benedikt Meurer <benny@xfce.org>

	* tests/test-exo-string.c, docs/reference/, exo/exo.symbols,
	  exo/exo-string.{c,h}, tests/Makefile.am: Add new utility function
	  exo_str_replace().

2005-12-04	Benedikt Meurer <benny@xfce.org>

	* HACKING: Add reminder to increment library major version whenever
	  new functions got added.

2005-12-03	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Build the gnuc visibility test program with -Wall
	  -Werror, as gcc reports warnings instead of errors if ELF visibility