@@ -1,3 +1,8 @@
+2006-01-14	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c: Draw keyfocus using the same semantics as
+	  GtkTreeView. This finally fixes bug #1321.
+
 2006-01-11	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_paint_item): Let the cell renderer
